--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -1,24 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <ListView
-        android:id="@+id/image_list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="24dp"
-        android:divider="@null"/>
+        android:layout_height="match_parent">
 
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent"
+            android:fadingEdge="none"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:scrollingCache="false">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
 
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/label_edit_text"
+                    style="@style/EditTextTheme"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:textSize="@dimen/abc_text_size_large_material"
+                    app:met_floatingLabel="highlight"
+                    app:met_floatingLabelAlwaysShown="true"
+                    app:met_floatingLabelText="@string/hint_note_title"
+                    app:met_floatingLabelTextColor="?attr/colorPrimary"
+                    app:met_primaryColor="?attr/colorPrimary">
 
-</FrameLayout>
+                </com.rengwuxian.materialedittext.MaterialEditText>
+
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/content_edit_text"
+                    style="@style/EditTextTheme"
+                    android:lineSpacingExtra="4dp"
+                    app:met_floatingLabel="highlight"
+                    app:met_floatingLabelAlwaysShown="true"
+                    app:met_floatingLabelText="@string/hint_note_content"
+                    app:met_floatingLabelTextColor="?attr/colorPrimary"
+                    app:met_hideUnderline="true"
+                    app:met_primaryColor="?attr/colorPrimary" />
+            </LinearLayout>
+        </ScrollView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|end"
+            android:src="@android:drawable/ic_dialog_email" />
+    </FrameLayout>
+
+</LinearLayout>
