--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -20,6 +20,7 @@
             android:scrollingCache="false">
 
             <LinearLayout
+                android:id="@+id/edit_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
